#依存関係
[package]
name = "inazuma"
version = "0.1.0"
edition = "2024"

[dependencies]
# ウィンドウ管理と描画ループを担うライブラリ
eframe = "0.33.2" 
egui = "0.33.2"

# Windows API
windows = { version = "0.62.2", features = [
    "Win32_UI_Input_KeyboardAndMouse", 
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }